test/users/vass/uniquify/u2-local-extern-extern.good
u2-local-extern-extern.chpl:8: error: the type of extern sublocid_local does not match the previous declaration
u2-local-extern-extern.chpl:4: note: the previous declaration is here
